added another paragraph to .content + highlights

--- a/css/style.css
+++ b/css/style.css
@@ -65,3 +65,7 @@ main .content table tbody tr:nth-child(odd){
 main .content table thead th.larger{
     width: 25%;
 }
+
+main .content p .highligthed{
+    background-color: yellow;
+}
