--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ main .content ul{
 }
 
 main .content{
-    font-size: 2.5em;
+    font-size: 1.8em;
 
 }
 
@@ -68,4 +68,35 @@ main .content table thead th.larger{
 
 main .content p .highligthed{
     background-color: yellow;
+}
+
+footer .subtitle{
+    font-size: 2em;
+    color: gray;
+    font-weight: 900;
+    margin: 0;
+}
+
+footer .container .img-box{
+    height: 250px;
+    width: 400px;
+    padding: 10px;
+    margin: 10px 0;
+    cursor: pointer;
+    background-position: center;
+    background-repeat: no-repeat;   /*PROBLEMA QUI*/
+    background-size: cover;
+}
+
+footer .img-box:first-child{
+    background: url(../img/monitor.jpg);
+}
+
+footer .img-box:last-child{
+    background: url(../img/graph.jpg);
+}
+
+footer .img-box h2{
+    font-size: 2em;
+    color: white;
 }
